--- a/doc/heimdal.texi
+++ b/doc/heimdal.texi
@@ -17,7 +17,7 @@
 @c not yet @include version.texi
 @set UPDATED $Date$
 @set EDITION 0.0
-@set VERSION 0.1c
+@set VERSION 0.1m
 
 @ifinfo
 @dircategory Heimdal
@@ -226,14 +226,9 @@ to the following restrictions:
 * Setting up a realm::          
 * Things in search for a better place::  
 * Kerberos 4 issues::           
+* Windows 2000 compatability::
 * Acknowledgments::             
 
- --- The Detailed Node Listing ---
-
-Kerberos 4 issues
-
-* Principal conversion issues::  
-* Converting a version 4 database::  
 @end menu
 
 @include intro.texi
@@ -242,6 +237,7 @@ Kerberos 4 issues
 @include setup.texi
 @include misc.texi
 @include kerberos4.texi
+@include win2k.texi
 @include ack.texi
 
 @c @shortcontents
