--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-09-24  Johan Danielsson  <joda@pdc.kth.se>
+
+	* kuser/kinit.c (main): only get default value for `get_v4_tgt' if
+	it's explicitly set in krb5.conf
+
 1999-09-23  Assar Westerlund  <assar@sics.se>
 
 	* lib/asn1/asn1_print.c (tag_names); add another univeral tag
