--- a/docs/manpages/nmblookup.1
+++ b/docs/manpages/nmblookup.1
@@ -56,8 +56,8 @@ Print a help (usage) message\&.
 .IP "\fB-B broadcast address\fP" 
 Send the query to the given broadcast
 address\&. Without this option the default behavior of nmblookup is to
-send the query to the broadcast address of the primary network
-interface as either auto-detected or defined in the 
+send the query to the broadcast address of the network
+interfaces as either auto-detected or defined in the 
 \fBinterfaces\fP parameter of the 
 \fBsmb\&.conf (5)\fP file\&.
 .IP 
