--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -914,6 +914,9 @@ parameter for details\&.  Note that some are synonyms\&.
 \fBwins server\fP
 .IP 
 .IP o 
+\fBwins hook\fP
+.IP 
+.IP o 
 \fBwins support\fP
 .IP 
 .IP o 
@@ -6623,6 +6626,41 @@ Samba source distribution\&.
 .IP 
 \fBExample:\fP
 \f(CW	wins server = 192\&.9\&.200\&.1\fP
+.IP 
+.IP "\fBwins hook (G)\fP" 
+.IP 
+When Samba is running as a WINS server this allows you to call an
+external program for all changes to the WINS database\&. The primary use
+for this option is to allow the dynamic update of external name
+resolution databases such as dynamic DNS\&.
+.IP 
+The wins hook parameter specifies the name of a script or executable
+that will be called as follows:
+.IP 
+wins_hook operation name nametype ttl IP_list
+.IP 
+The first argument is the operation and is one of "add", "delete",
+or "refresh"\&. In most cases the operation can be ignored as the rest
+of the parameters provide sufficient information\&. Note that "refresh"
+may sometimes be called when the name has not previously been added,
+in that case it should be treated as an add\&.
+.IP 
+The second argument is the netbios name\&. If the name is not a legal
+name then the wins hook is not called\&. Legal names contain only
+letters, digits, hyphens, underscores and periods\&.
+.IP 
+The third argument is the netbios name type as a 2 digit hexadecimal
+number\&. 
+.IP 
+The fourth argument is the TTL (time to live) for the name in seconds\&.
+.IP 
+The fifth and subsequent arguments are the IP addresses currently
+registered for that name\&. If this list is empty then the name should
+be deleted\&.
+.IP 
+An example script that calls the BIND dynamic DNS update program
+"nsupdate" is provided in the examples directory of the Samba source
+code\&. 
 .IP 
 .IP "\fBwins support (G)\fP" 
 .IP 
