--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-09-27  Johan Danielsson  <joda@pdc.kth.se>
+
+	* lib/krb5/recvauth.c: new function `krb5_recvauth_match_version'
+	that allows more intelligent matching of the application version
+
 1999-09-26  Assar Westerlund  <assar@sics.se>
 
 	* lib/asn1/asn1_print.c: add err.h
