--- a/docs/manpages/lmhosts.5
+++ b/docs/manpages/lmhosts.5
@@ -1,4 +1,4 @@
-.TH LMHOSTS 5 "22 Jul 1999" "lmhosts 2.0.5a"
+.TH "lmhosts " "5" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 lmhosts \- The Samba NetBIOS hosts file
