--- a/docs/manpages/swat.8
+++ b/docs/manpages/swat.8
@@ -1,4 +1,4 @@
-.TH SWAT 8 "22 Jul 1999" "swat 2.0.5a"
+.TH "swat " "8" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 swat \- Samba Web Administration Tool
