--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -1,11 +1,11 @@
-.TH TESTPARM 1 "22 Jul 1999" "testparm 2.0.5a"
+.TH "testparm " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 testparm \- check an smb\&.conf configuration file for internal correctness
 .PP 
 .SH "SYNOPSIS" 
 .PP 
-\fBtestparm\fP [-s] [configfilename] [hostname hostIP]
+\fBtestparm\fP [-s] [-h] [-L servername] [configfilename] [hostname hostIP]
 .PP 
 .SH "DESCRIPTION" 
 .PP 
@@ -36,6 +36,13 @@ an exit code of 0\&. This allows shell scripts to test the output from
 Without this option, \fBtestparm\fP will prompt for a
 carriage return after printing the service names and before dumping
 the service definitions\&.
+.IP 
+.IP "\fB-h\fP" 
+Print usage message
+.IP 
+.IP "\fB-L servername\fP" 
+Sets the value of the %L macro to servername\&. This
+is useful for testing include files specified with the %L macro\&.
 .IP 
 .IP "\fBconfigfilename\fP" 
 This is the name of the configuration file to
