--- a/docs/manpages/testprns.1
+++ b/docs/manpages/testprns.1
@@ -1,4 +1,4 @@
-.TH TESTPRNS 1 "22 Jul 1999" "testprns 2.0.5a"
+.TH "testprns " "1" "23 Oct 1998" "Samba" "SAMBA" 
 .PP 
 .SH "NAME" 
 testprns \- check printer name for validity with smbd 
