--- a/appl/su/ChangeLog
+++ b/appl/su/ChangeLog
@@ -1,3 +1,7 @@
+1999-09-28  Assar Westerlund  <assar@sics.se>
+
+	* su.c (krb5_verify): use krb5_verify_user_lrealm
+
 1999-08-04  Assar Westerlund  <assar@sics.se>
 
 	* su.c: add support for shadow passwords and rewrite some logic.
