--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -530,7 +530,16 @@ parameter for details\&.  Note that some are synonyms\&.
 \fBdeadtime\fP
 .IP 
 .IP o 
+\fBdebug hires timestamp\fP
+.IP 
+.IP o 
+\fBdebug pid\fP
+.IP 
+.IP o 
 \fBdebug timestamp\fP
+.IP 
+.IP o 
+\fBdebug uid\fP
 .IP 
 .IP o 
 \fBdebuglevel\fP
@@ -1841,6 +1850,21 @@ performed\&.
 \fBExample:\fP
 \f(CW	deadtime = 15\fP
 .IP 
+.IP "\fBdebug hires timestamp (G)\fP" 
+.IP 
+Sometimes the timestamps in the log messages are needed with a
+resolution of higher that seconds, this boolean parameter adds
+microsecond resolution to the timestamp message header when turned on\&.
+.IP 
+Note that the parameter \fBdebug timestamp\fP
+must be on for this to have an effect\&.
+.IP 
+\fBDefault:\fP
+\f(CW debug hires timestamp = No\fP
+.IP 
+\fBExample:\fP
+\f(CW debug hires timestamp = Yes\fP
+.IP 
 .IP "\fBdebug timestamp (G)\fP" 
 .IP 
 Samba2\&.0 debug log messages are timestamped by default\&. If you are
@@ -1853,6 +1877,37 @@ off\&.
 .IP 
 \fBExample:\fP
 \f(CW	debug timestamp = No\fP
+.IP 
+.IP "\fBdebug pid (G)\fP" 
+.IP 
+When using only one log file for more then one forked smbd-process
+there may be hard to follow which process outputs which message\&.
+This boolean parameter is adds the process-id to the timestamp message
+headers in the logfile when turned on\&.
+.IP 
+Note that the parameter \fBdebug timestamp\fP
+must be on for this to have an effect\&.
+.IP 
+\fBDefault:\fP
+\f(CW	debug pid = No\fP
+.IP 
+\fBExample:\fP
+\f(CW	debug pid = Yes\fP
+.IP 
+.IP "\fBdebug uid (G)\fP" 
+.IP 
+Samba is sometimes run as root and sometime run as the connected
+user, this boolean parameter inserts the current euid, egid, uid
+and gid to the timestamp message headers in the log file if turned on\&.
+.IP 
+Note that the parameter \fBdebug timestamp\fP
+must be on for this to have an effect\&.
+.IP 
+\fBDefault:\fP
+\f(CW	debug uid = No\fP
+.IP 
+\fBExample:\fP
+\f(CW	debug uid = Yes\fP
 .IP 
 .IP "\fBdebug level (G)\fP" 
 .IP 
@@ -3539,34 +3594,9 @@ See the section on \fB"NAME MANGLING"\fP\&.
 .IP 
 .IP "\fBmangle locks (S)\fP" 
 .IP 
-This option is new with Samba 2\&.0\&.4 and above\&. It only has an effect on locking
-when Samba is running on a 32-bit platform such as Linux (2\&.0, 2\&.2) on x86 but not on
-64-bit platforms such as IRIX, Solaris 2\&.7 and above, AIX 4\&.2 etc\&.
-.IP 
-This option was introduced as NT clients have a bug in that they still send 64-bit
-lock requests to servers like Samba on 32-bit platforms that have explicitly 
-told the client that they do not support 64-bit file access\&.
-.IP 
-If this option is set to "True" (the default) on a 32-bit system then Samba
-will truncate any lock length greater than 31 bits (the POSIX limit on 32-bit
-systems) and then attempt to mangle the lock offset from a 64-bit value to a
-high 32 bit value\&. It does this by examining the number of bits set in the
-top 32 bits, looking at the lower 31 bits starting from the 31st bit going
-downward (the POSIX limit on 32-bit systems) for a range of zero bits that
-this can be mapped into and then mapping the upper set bits into the lower
-set bits\&.
-.IP 
-If no space can be found then a locking error is returned to the client\&.
-.IP 
-Note that this option has \fBNO\fP effect on 64 bit systems\&. It should not
-be turned off on 32 bit systems unless it can be shown that this is causing
-a locking problem for a client application\&.
-.IP 
-\fBDefault:\fP
-\f(CW		mangle locks = Yes\fP
-.IP 
-\fBExample:\fP
-\f(CW		mangle locks = No\fP
+This option is was introduced with Samba 2\&.0\&.4 and above and has been
+removed in Samba 2\&.0\&.6 as Samba now dynamically configures such things
+on 32 bit systems\&.
 .IP 
 .IP "\fBmangled map (S)\fP" 
 .IP 
