*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7062 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+199909-30  Assar Westerlund  <assar@sics.se>
+
+	* ftpd/ftpd_locl.h: add prototype for fclose to make sunos happy
+
 1999-08-18  Assar Westerlund  <assar@sics.se>
 
 	* ftp/cmds.c (getit): be more suspicious when parsing the result
