--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
-Changes in release 0.1n:
+Changes in release 0.2a:
 
+ * a new program verify_krb5_conf for checking your /etc/krb5.conf
  * implmenet a keytab backend for AFS KeyFile's
  * implement a keytab backend for v4 srvtabs
  * implement `ktutil copy'
