--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,6 +1,11 @@
-199909-30  Assar Westerlund  <assar@sics.se>
+1999-09-30  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ftpd_locl.h: add prototype for fclose to make sunos happy
+
+1999-08-19  Johan Danielsson  <joda@pdc.kth.se>
+
+	* ftpd/ftpd.c (do_login): show issue-file
+	(send_data): change handling of zero-byte files
 
 1999-08-18  Assar Westerlund  <assar@sics.se>
 
