--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -20,6 +20,12 @@
 	* kxd.c (recv_conn): give better error message
 	(doit_active): don't die if fork gives EAGAIN
 
+1999-08-19  Johan Danielsson  <joda@pdc.kth.se>
+
+	* kxd.c (recv_conn): call setjob on crays;
+	(doit_passive): if fork fails with EAGAIN, don't shutdown, just close
+	the connection re-implement `-t' flag
+
 1999-07-12  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: handle not building X programs
