--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,13 @@
+1999-10-03  Johan Danielsson  <joda@pdc.kth.se>
+
+	* ftp/kauth.c (kauth): make sure we're using private protection
+	level
+
+	* ftp/security.c (set_command_prot): set command protection level
+
+	* ftp/security.c: make it possible to set the command protection
+	level with `prot'
+
 1999-09-30  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ftpd_locl.h: add prototype for fclose to make sunos happy
