--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,3 +1,8 @@
+1999-10-03  Assar Westerlund  <assar@sics.se>
+
+	* init_c.c (_kadm5_c_init_context): use `krb5_get_krb_admin_hst'.
+  	check return value from strdup
+
 1999-09-26  Assar Westerlund  <assar@sics.se>
 
 	* acl.c (_kadm5_privs_to_string): forgot one strcpy_truncate ->
