*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7105 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-10-03  Assar Westerlund  <assar@sics.se>
 
+	* lib/krb5/convert_creds.c (krb524_convert_creds_kdc): look at the
+ 	type of the session key
+
 	* lib/krb5/crypto.c (krb5_enctypes_compatible_keys): spell
  	correctly
 
