--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-04  Johan Danielsson  <joda@pdc.kth.se>
+
+	* ftpd/ftpcmd.y: FEAT
+
 1999-10-03  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ls.c: fall-back definitions for constans and casts for
