*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7113 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-06  Assar Westerlund  <assar@sics.se>
+
+	* getarg.c (getarg): also set optind when returning error
+
 1999-09-26  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: add parse_bytes.[ch]
