*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7118 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 1999-10-06  Assar Westerlund  <assar@sics.se>
 
+	* lib/krb5/copy_host_realm.c (krb5_copy_host_realm): copy all the
+ 	strings
+
+	* lib/krb5/verify_user.c (krb5_verify_user_lrealm): free the
+ 	correct realm part
+
 	* kdc/connect.c (handle_tcp): things work much better when ret is
  	initialized
 
