--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,8 @@
+1999-10-10  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am (CLEANFILES): add generated files so that they get
+ 	cleaned away
+
 1999-09-29  Assar Westerlund  <assar@sics.se>
 
 	* common.c (match_local_auth): only look for FamilyLocal (and
