--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,11 @@
+1999-10-12  Assar Westerlund  <assar@sics.se>
+
+	* find-func-no-libs2.m4 (AC_FIND_FUNC_NO_LIBS2): new argument
+ 	`extra libs'
+
+	* find-func-no-libs.m4 (AC_FIND_FUNC_NO_LIBS): new argument `extra
+ 	libs'
+
 1999-09-01  Johan Danielsson  <joda@pdc.kth.se>
 
 	* capabilities.m4: sgi capabilities
