*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7140 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 1999-10-10  Assar Westerlund  <assar@sics.se>
 
+	* lib/krb5/mk_req.c (krb5_mk_req): use krb5_free_host_realm
+
 	* lib/krb5/krb5.h (krb5_ccache_data): make `ops' const
 
 	* lib/krb5/crypto.c (krb5_string_to_salttype): new function
@@ -11,6 +13,10 @@
 	* **/*.[ch]: const-ize
 
 1999-10-06  Assar Westerlund  <assar@sics.se>
+	
+	* lib/krb5/creds.c (krb5_compare_creds): const-ify
+	
+	* lib/krb5/cache.c: clean-up and comment-up
 
 	* lib/krb5/copy_host_realm.c (krb5_copy_host_realm): copy all the
  	strings
