*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7142 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,8 @@
+1999-10-14  Assar Westerlund  <assar@sics.se>
+
+	* rsh.c (proto): be more careful and don't print errno when read()
+ 	returns 0
+
 1999-09-20  Assar Westerlund  <assar@sics.se>
 
 	* rshd.c (recv_krb4_auth): set `iv'
