--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-16  Johan Danielsson  <joda@pdc.kth.se>
+
+	* kuser/kinit.c (main): pass ccache to krb524_convert_creds_kdc
+
 1999-10-12  Johan Danielsson  <joda@pdc.kth.se>
 
 	* lib/krb5/crypto.c (krb5_enctype_to_keytype): remove warning
