--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,19 @@
 Changes in release 0.2a:
 
  * a new program verify_krb5_conf for checking your /etc/krb5.conf
- * implmenet a keytab backend for AFS KeyFile's
+ * support multiple local realms
+ * implement a keytab backend for AFS KeyFile's
  * implement a keytab backend for v4 srvtabs
  * implement `ktutil copy'
  * support password quality control in v4 kadmind
  * improvements in v4 compat kadmind
+ * handle the case of having the correct cred in the ccache but with
+   the wrong encryption type better
  * v6-ify the remaining programs.
+ * internal ls in ftpd
+ * rename strcpy_truncate/strcat_truncate to strlcpy/strlcat
  * add `ank --random-password' and `cpw --random-password' in kadmin
+ * some programs and documentation for trying to talk to a W2K KDC
  * bug fixes
 
 Changes in release 0.1m:
