--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Oct 17 17:14:11 1999  Assar Westerlund  <assar@juguete.sics.se>
+
+	* Release 0.2a
+
 1999-10-17  Assar Westerlund  <assar@sics.se>
 
 	* configure.in: only test for db.h with using berkeley_db. remember
